--- a/index.html
+++ b/index.html
@@ -3,211 +3,244 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Trading Game</title>
+    <title>Stock Market Game</title>
     <style>
-        /* Basic styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
-            color: #333;
         }
-
         header {
-            background-color: #4caf50;
+            background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
             text-align: center;
         }
-
-        main {
+        .container {
             padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
         }
-
-        .stock {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .stock button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .stock button:hover {
-            background-color: #45a049;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #4caf50;
-            color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        #leaderboard {
-            margin-top: 20px;
-        }
-
-        #leaderboard h2 {
-            margin-bottom: 10px;
-        }
-
-        table {
+        .stock-table, .portfolio-table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 10px;
+            margin-bottom: 20px;
         }
-
-        table, th, td {
+        .stock-table th, .stock-table td, .portfolio-table th, .portfolio-table td {
             border: 1px solid #ddd;
-        }
-
-        th, td {
             padding: 8px;
             text-align: center;
         }
-
-        th {
-            background-color: #f2f2f2;
+        .stock-table th, .portfolio-table th {
+            background-color: #4CAF50;
+            color: white;
         }
-
-        .balance {
-            margin: 20px 0;
-            font-size: 18px;
-            font-weight: bold;
+        .news-section {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 20px;
+        }
+        .news-item {
+            margin-bottom: 10px;
+        }
+        .stats {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .stats div {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 15px;
+            flex: 1;
+            margin-right: 10px;
+        }
+        .stats div:last-child {
+            margin-right: 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Stock Trading Game</h1>
+        <h1>Stock Market Game</h1>
+        <p>Manage your portfolio and respond to market news!</p>
     </header>
-
-    <main>
-        <div class="balance">Current Balance: $<span id="balance">1000</span></div>
-
-        <div id="stocks">
-            <!-- Stocks will be dynamically added here -->
+    <div class="container">
+        <div class="stats">
+            <div id="timer">Time Left: 5:00</div>
+            <div id="portfolio-value">Portfolio Value: $100,000</div>
+            <div id="risk-status">Risk Level: Low</div>
         </div>
 
-        <div id="leaderboard">
-            <h2>Leaderboard</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Player</th>
-                        <th>Net Worth</th>
-                    </tr>
-                </thead>
-                <tbody id="leaderboard-body">
-                    <!-- Leaderboard rows will be dynamically added here -->
-                </tbody>
-            </table>
+        <div class="news-section">
+            <h2>Market News</h2>
+            <div id="news-feed"></div>
         </div>
-    </main>
 
-    <footer>
-        <p>&copy; 2025 Stock Trading Game</p>
-    </footer>
+        <h2>Stocks</h2>
+        <table class="stock-table">
+            <thead>
+                <tr>
+                    <th>Stock</th>
+                    <th>Price</th>
+                    <th>Change</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="stock-list"></tbody>
+        </table>
+
+        <h2>Your Portfolio</h2>
+        <table class="portfolio-table">
+            <thead>
+                <tr>
+                    <th>Stock</th>
+                    <th>Quantity</th>
+                    <th>Total Value</th>
+                </tr>
+            </thead>
+            <tbody id="portfolio"></tbody>
+        </table>
+    </div>
 
     <script>
-        // Game data
-        const initialBalance = 1000;
-        let balance = initialBalance;
-        let stocks = [
-            { name: 'TechCorp', price: 100 },
-            { name: 'HealthInc', price: 150 },
-            { name: 'EcoEnergy', price: 80 }
-        ];
-        let leaderboard = [
-            { player: 'Player1', netWorth: 1200 },
-            { player: 'Player2', netWorth: 900 }
+        const stocks = [
+            { name: "TechCorp", price: 150, volatility: 5 },
+            { name: "HealthPlus", price: 200, volatility: 7 },
+            { name: "EcoEnergy", price: 100, volatility: 4 },
+            { name: "AutoDrive", price: 80, volatility: 6 }
         ];
 
-        // Helper to format as currency
-        function formatCurrency(amount) {
-            return amount.toFixed(2);
-        }
+        const portfolio = {};
+        let cash = 100000;
+        let timer = 300;
 
-        // Update balance display
-        function updateBalance() {
-            document.getElementById('balance').textContent = formatCurrency(balance);
-        }
+        const newsEvents = [
+            "TechCorp announces record profits!",
+            "HealthPlus faces regulatory challenges.",
+            "EcoEnergy secures a major government contract.",
+            "AutoDrive launches a new electric car model.",
+            "Market crash fears loom as interest rates rise.",
+            "Economic growth slows, affecting all sectors."
+        ];
 
-        // Update leaderboard
-        function updateLeaderboard() {
-            const tbody = document.getElementById('leaderboard-body');
-            tbody.innerHTML = '';
-            leaderboard.forEach(entry => {
-                const row = document.createElement('tr');
-                row.innerHTML = `<td>${entry.player}</td><td>$${formatCurrency(entry.netWorth)}</td>`;
-                tbody.appendChild(row);
+        function updateStocks() {
+            stocks.forEach(stock => {
+                const change = (Math.random() * stock.volatility * 2 - stock.volatility).toFixed(2);
+                stock.price = Math.max(1, stock.price + parseFloat(change));
+                stock.change = parseFloat(change);
             });
         }
 
-        // Render stocks
         function renderStocks() {
-            const stocksDiv = document.getElementById('stocks');
-            stocksDiv.innerHTML = '';
-            stocks.forEach((stock, index) => {
-                const stockDiv = document.createElement('div');
-                stockDiv.className = 'stock';
-                stockDiv.innerHTML = `
-                    <span>${stock.name}: $${formatCurrency(stock.price)}</span>
-                    <button onclick="buyStock(${index})">Buy</button>
-                    <button onclick="sellStock(${index})">Sell</button>
+            const stockList = document.getElementById("stock-list");
+            stockList.innerHTML = "";
+
+            stocks.forEach(stock => {
+                stockList.innerHTML += `
+                    <tr>
+                        <td>${stock.name}</td>
+                        <td>$${stock.price.toFixed(2)}</td>
+                        <td style="color: ${stock.change >= 0 ? 'green' : 'red'}">${stock.change.toFixed(2)}</td>
+                        <td>
+                            <button onclick="buyStock('${stock.name}')">Buy</button>
+                            <button onclick="sellStock('${stock.name}')">Sell</button>
+                        </td>
+                    </tr>
                 `;
-                stocksDiv.appendChild(stockDiv);
             });
         }
 
-        // Buy stock
-        function buyStock(index) {
-            const stock = stocks[index];
-            if (balance >= stock.price) {
-                balance -= stock.price;
-                stock.price *= 1.1; // Increase stock price by 10%
-                updateBalance();
-                renderStocks();
+        function buyStock(name) {
+            const stock = stocks.find(s => s.name === name);
+            if (cash >= stock.price) {
+                cash -= stock.price;
+                portfolio[name] = (portfolio[name] || 0) + 1;
+                updatePortfolio();
             } else {
-                alert('Not enough balance to buy this stock!');
+                alert("Not enough cash to buy this stock.");
             }
         }
 
-        // Sell stock
-        function sellStock(index) {
-            const stock = stocks[index];
-            balance += stock.price;
-            stock.price *= 0.9; // Decrease stock price by 10%
-            updateBalance();
-            renderStocks();
+        function sellStock(name) {
+            if (portfolio[name] > 0) {
+                const stock = stocks.find(s => s.name === name);
+                cash += stock.price;
+                portfolio[name] -= 1;
+                if (portfolio[name] === 0) delete portfolio[name];
+                updatePortfolio();
+            } else {
+                alert("You don't own this stock.");
+            }
         }
 
-        // Initialize game
-        function initGame() {
-            updateBalance();
-            renderStocks();
-            updateLeaderboard();
+        function updatePortfolio() {
+            const portfolioTable = document.getElementById("portfolio");
+            portfolioTable.innerHTML = "";
+            let totalValue = cash;
+
+            for (const [name, quantity] of Object.entries(portfolio)) {
+                const stock = stocks.find(s => s.name === name);
+                const value = quantity * stock.price;
+                totalValue += value;
+
+                portfolioTable.innerHTML += `
+                    <tr>
+                        <td>${name}</td>
+                        <td>${quantity}</td>
+                        <td>$${value.toFixed(2)}</td>
+                    </tr>
+                `;
+            }
+
+            document.getElementById("portfolio-value").textContent = `Portfolio Value: $${totalValue.toFixed(2)}`;
         }
 
-        // Start the game
-        initGame();
+        function updateNews() {
+            const newsFeed = document.getElementById("news-feed");
+            const newsItem = newsEvents[Math.floor(Math.random() * newsEvents.length)];
+
+            newsFeed.innerHTML = `<div class="news-item">${newsItem}</div>` + newsFeed.innerHTML;
+
+            // Simulate market reaction to news
+            if (newsItem.includes("crash")) {
+                stocks.forEach(stock => {
+                    stock.price = Math.max(1, stock.price * 0.9);
+                });
+            } else if (newsItem.includes("record profits")) {
+                stocks[0].price *= 1.1; // Example boost to a specific stock
+            }
+        }
+
+        function updateTimer() {
+            timer -= 1;
+            const minutes = Math.floor(timer / 60);
+            const seconds = timer % 60;
+            document.getElementById("timer").textContent = `Time Left: ${minutes}:${seconds.toString().padStart(2, '0')}`;
+
+            if (timer <= 0) {
+                clearInterval(gameInterval);
+                alert("Game Over! Check your final portfolio value.");
+            }
+        }
+
+        function gameLoop() {
+            updateStocks();
+            renderStocks();
+            updatePortfolio();
+            updateNews();
+        }
+
+        const gameInterval = setInterval(() => {
+            gameLoop();
+            updateTimer();
+        }, 5000);
+
+        // Initial Render
+        renderStocks();
+        updatePortfolio();
     </script>
 </body>
 </html>
